# CoRoDro-Rover-Platform-Stack

./: .gitignore  README.md
leo_bringup/: package.xml
leo_bringup/launch/: leo_bringup.launch
leo_description/: CMakeLists.txt  README.md  package.xml
leo_description/launch/: description.launch
leo_description/models/: rplidar.dae
leo_description/old/: package.xml
leo_description/old/launch/: display.launch  display_cv.launch  display_cv_solo_description.launch
leo_description/old/meshes/: ax12_box.dae  kinect.dae
leo_description/old/rviz/: model.rviz
leo_description/old/urdf/old/: head (copy).xacro  head_hardware (copy).xacro  leo.urdf (copy).xacro  leo.urdf.xacro  leo_cv.urdf (copy).xacro
leo_description/old/urdf/old_16_09_2020/: head.xacro  leo_cv.urdf.xacro  materials.xacro  simulation_parameters.xacro
leo_description/urdf/: leo.gazebo.xacro  leo.urdf.xacro
leo_gazebo/: README.md
leo_gazebo/config/: controllers.yaml
leo_navigation/: CMakeLists.txt  README.md  package.xml
leo_navigation/config/: amcl.yaml  slam_gmapping.yaml
leo_navigation/config/ekf_localization_node/: ekf_2d.yaml  ekf_3d.yaml
leo_navigation/config/move_base/: move_base.yaml
leo_navigation/config/move_base/costmaps/: costmap_common.yaml  global_costmap.yaml  local_costmap.yaml
leo_navigation/config/move_base/planners/: global_planner.yaml  local_planner.yaml
leo_navigation/nodes/: move_base_square.py  nav_square.py  odom_out_and_back.py  time_out_and_back.py
leo_teleop/launch/: bag_recording.launch  bag_recording_test.launch  leo_rover_terminal_output
leo_tests/launch/: bag_recording.launch
leo_viz/: package.xml
leo_viz/launch/: rviz.launch  view_model.launch  view_model_with_gazebo.launch
leo_viz/rviz/: robot.rviz
