<?xml version="1.0"?>
<package format="2">
  <name>leo_navigation</name>
  <version>0.3.0</version>
  <description>
    This package provides LeoRover navigation.
  </description>

  <maintainer email="support@fictionlab.pl">fictionlab</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

</package>
